read all bytes