@@ -17,7 +17,6 @@ import kotlin.sequences.Sequence;
 import kotlin.text.MatchGroupCollection;
 import kotlin.text.MatchResult;
 import kotlin.text.Regex;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.mozilla.universalchardet.UniversalDetector;
 import org.slf4j.Logger;
@@ -135,7 +134,7 @@ public class FormatCommand extends AbstractCommand {
 
   private String parseLineEndings(POMDocument pomFile) throws IOException {
     InputStream inputStream = new ByteArrayInputStream(pomFile.getOriginalPom());
-    byte[] bytes = IOUtils.toByteArray(inputStream);
+    byte[] bytes = inputStream.readAllBytes();
     String str = new String(bytes, pomFile.getCharset());
 
     Map<String, Integer> lineEndingCounts = new HashMap<>();
